<resources>
    <string name="app_name">synagoguemanagement</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_signin">Sign in</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="shabbat_entry_title">Upcoming shabbat entry and exit times</string>
    <string name="shabbat_entry_ticket">7th-8th of Adar</string>
    <string name="shabbat_entry_time">Entry Friday, 5:34PM</string>
    <string name="shabbat_exit_time">Exit Saturday, 6:48PM</string>
    <string name="booked_seats_title">Your booked seats</string>
    <string name="book_seats_button">Book seats</string>
    <string name="cancel_button">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="reserved">Reserved</string>
    <string name="available">Available</string>
    <string name="selected">Selected</string>
    <string name="sign_out">Sign Out</string>
    <string name="message_image">Message image</string>

</resources>