<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.book.BookSeatsFragment"
    android:id="@+id/seats_map_page">

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_seats_button"
        android:textAllCaps="false"
        android:layout_marginTop="55dp"
        android:textColor="@color/black"
        android:gravity="left"
        android:textSize="20sp"
        android:backgroundTint="@color/card_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/date_picker_dropdown"
        android:layout_width="323dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/editbox_background"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        android:gravity="center"
        android:padding="12dp"
        android:paddingBottom="6dp"
        android:text="Select Date"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/iconRecyclerView"
        android:layout_width="317dp"
        android:layout_height="343dp"
        android:layout_margin="8dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_picker_dropdown"
        app:layout_constraintVertical_bias="0.121" />

    <!-- Legend Row -->

    <LinearLayout
        android:id="@+id/legend_row"
        android:layout_width="361dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconRecyclerView"
        app:layout_constraintVertical_bias="0.0">

        <!-- Available -->
        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_bullet"
            app:tint="@color/button_bg" />

        <!-- Reserved -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/available"
            android:textColor="@color/button_bg"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_bullet"
            app:tint="@color/red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/reserved"
            android:textColor="@color/red"
            android:textSize="16sp" />

        <!-- Selected -->
        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_bullet"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/confirm_selected_seats"
        android:layout_width="327dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/button_bg"
        android:gravity="center"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconRecyclerView"
        app:layout_constraintVertical_bias="0.425" />

    <Button
        android:id="@+id/cancel_selected_seats"
        android:layout_width="325dp"
        android:layout_height="42dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_border"
        android:gravity="center"
        android:text="@string/cancel_button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_selected_seats"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>